adding new image file paths

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="icon" href="favicon-32x32.png">
 <link rel="stylesheet" href="statsPreview.css">
 <link rel="preconnect"  href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -7,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 	<body>
 		<div id="statsContainer">
-			<img id="stockPhoto" src="C:\Users\bryan\OneDrive\Documents\Statspreview\statsPreviewMobile.jpg">
+			<img id="stockPhoto" src="statsPreviewMobile.jpg">
 			<h2 id="head">Get <em id="headColor">insights</em> that help your business grow.</h2>
       <p id="textBody">Discover the benefits of data analytics and make better decisions
       regarding revenue, customer experience, and overall efficiency.</p>
