--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="statsContainer">
 			<img id="stockPhoto" src="statsPreviewMobile.jpg">
-			<h2 id="head">Get <em id="headColor">insights</em> that help your business grow.</h2>
+			<h2 id="head">Get <strong id="headColor">insights</strong> that help your business grow.</h2>
       <p id="textBody">Discover the benefits of data analytics and make better decisions
       regarding revenue, customer experience, and overall efficiency.</p>
       <h3 id="companyNums">10k+</h3>
